--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hacoidev/laravel-caching-model",
+    "name": "ngockush/laravel-caching-model",
     "description": "A simple cache library for laravel eloquent model",
     "type": "library",
     "require": {
@@ -9,14 +9,12 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Hacoidev\\CachingModel\\": "src/"
+            "ngockush\\CachingModel\\": "src/"
         }
     },
-    "authors": [
-        {
-            "name": "hacoidev",
-            "email": "hacoi.dev@gmail.com"
-        }
-    ],
+    "authors": [{
+        "name": "ngockush",
+        "email": "ngockushinfo@gmail.com"
+    }],
     "minimum-stability": "stable"
 }
